--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 .form {
-    padding: 20px;
+    padding: 10px;
 }
 
 .form-control {
@@ -53,3 +53,15 @@ body {
     padding: 10px;
 }
 
+button {
+    background: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+    color: #fff;
+    font-size: 15px;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
