--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,20 @@ body {
     padding: 10px;
 }
 
+.form-control i {
+    position: absolute;
+    top: 45px;
+    right: 10px;
+    visibility: hidden;
+}
+
+.form-control small {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+}
+
 button {
     background: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
     color: #fff;
@@ -64,4 +78,6 @@ button {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+    margin-bottom: 10px;
+    width: 50%;
 }
