--- a/assets/css/stylesLogin.css
+++ b/assets/css/stylesLogin.css
@@ -5,6 +5,28 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.navbar {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+}
+
+.nav-links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-links li {
+    display: inline;
+    margin-left: 20px;
+}
+
+.nav-links a {
+    text-decoration: none;
+    color: #fff;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
